@@ -1,3 +1,6 @@
+# Copyright 2021-2022 David Robillard <d@drobilla.net>
+# SPDX-License-Identifier: CC0-1.0 OR ISC
+
 PROJECT_NAME           = Sratom
 PROJECT_BRIEF          = "A small library for serializing LV2 atoms"
 
