@@ -1,3 +1,6 @@
+# Copyright 2021-2022 David Robillard <d@drobilla.net>
+# SPDX-License-Identifier: CC0-1.0 OR ISC
+
 config = configuration_data()
 config.set('SRATOM_VERSION', meson.project_version())
 
