@@ -1,3 +1,7 @@
+..
+   Copyright 2020-2021 David Robillard <d@drobilla.net>
+   SPDX-License-Identifier: ISC
+
 #############
 API Reference
 #############
