@@ -1,3 +1,7 @@
+..
+   Copyright 2020-2021 David Robillard <d@drobilla.net>
+   SPDX-License-Identifier: ISC
+
 Sratom is a small library for serializing `LV2 atoms`_.  Sratom reads/writes
 atoms from/to RDF, allowing them to be converted between binary and text or
 stored in a model.
