@@ -1,3 +1,6 @@
+# Copyright 2021-2022 David Robillard <d@drobilla.net>
+# SPDX-License-Identifier: CC0-1.0 OR ISC
+
 project('sratom', ['c'],
         version: '0.6.13',
         license: 'ISC',
