@@ -1,3 +1,6 @@
+# Copyright 2021-2022 David Robillard <d@drobilla.net>
+# SPDX-License-Identifier: CC0-1.0 OR ISC
+
 option('docs', type: 'feature', value: 'auto', yield: true,
        description: 'Build documentation')
 
