@@ -1,3 +1,31 @@
+# Copyright 2021-2022 David Robillard <d@drobilla.net>
+# SPDX-License-Identifier: CC0-1.0 OR ISC
+
+####################
+# Project Metadata #
+####################
+
+
+# Check release metadata
+if not meson.is_subproject() and get_option('strict')
+  autoship = find_program('autoship', required: false)
+  if autoship.found()
+    test('autoship', autoship, args: ['test', sratom_src_root], suite: 'data')
+  endif
+endif
+
+# Check licensing metadata
+reuse = find_program('reuse', required: false)
+if reuse.found()
+  test('REUSE', reuse,
+       args: ['--root', sratom_src_root, 'lint'],
+       suite: 'data')
+endif
+
+##############
+# Unit Tests #
+##############
+
 unit_tests = [
   'sratom',
 ]
@@ -15,11 +43,3 @@ foreach unit : unit_tests
     suite: 'unit',
   )
 endforeach
-
-if not meson.is_subproject() and get_option('strict')
-  # Check release metadata
-  autoship = find_program('autoship', required: false)
-  if autoship.found()
-    test('autoship', autoship, args: ['test', sratom_src_root], suite: 'data')
-  endif
-endif
