@@ -1,8 +1,9 @@
 sratom (0.6.13) unstable; urgency=medium
 
   * Add project metadata
+  * Adopt REUSE machine-readable licensing standard
 
- -- David Robillard <d@drobilla.net>  Tue, 16 Aug 2022 00:35:13 +0000
+ -- David Robillard <d@drobilla.net>  Thu, 01 Sep 2022 18:20:58 +0000
 
 sratom (0.6.12) stable; urgency=medium
 
